# genAI-workshop-short

./: README.md  pyproject.toml  requirements.txt  template.env
Lessons/: 01_Data_cleaning_with_genAI.ipynb
data/: processed_reviews.xlsx  product_list.md  product_reviews.xlsx
hackathon/: env.py  env_vars.py  paths.py
hackathon/colab/: load_env.py  setup.py
hackathon/evaluation/: solution_location_country_mapping.xlsx
lessons/: 01_Data_cleaning_with_genAI.ipynb
