[tool.poetry]
name = "genai-workshop-short"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
openai = "^1.13.3"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
numpy = "^2.1.0"
pprintpp = "^0.4.0"
devtools = "^0.12.2"
langfuse = "^2.45.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
xlsxwriter = "^3.2.0"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
